<resources>
    <string name="app_name">Hackathon</string>
    <string name="mc_donald_company">Mc\'Donald Company</string>
    <string name="mcdonald_s_company">McDonald\'s Company</string>
    <string name="your_login">Your Login</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="re_enter_the_password">Re-enter the password</string>
    <string name="enter">Enter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_of_employees">List of employees</string>
    <string name="add">add</string>
    <string name="add_new_employee">Add new employee</string>
    <string name="low">low</string>
    <string name="mid">mid</string>
    <string name="red">red</string>
    <string name="save">Save</string>
    <string name="enter_the_name">Enter the name</string>
    <string name="enter_the_work_role">Enter the work role</string>
    <string name="trust_level">Trust level</string>
    <string name="high">high</string>
    <string name="info">Info</string>
    <string name="name">Name</string>
    <string name="name1">Name:</string>
    <string name="work_role">Work role:</string>
    <string name="level_of_trust">Level of trust:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="back">Back</string>
    <array name="man_or_woman">
        <item>man</item>
        <item>woman</item>
    </array>
    <array name="spinnerTrustLevel">
        <item>high</item>
        <item>mid</item>
        <item>low</item>
    </array>
</resources>