<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@null"
        android:padding="24dp"
        android:src="@drawable/ic_mcdonalds" />

    <EditText
        android:id="@+id/etInputLogin"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="8dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="16dp"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/etInputPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="8dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="16dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etInputPasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:padding="8dp"
        android:background="@drawable/edit_text_border"
        android:layout_marginBottom="16dp"
        android:hint="@string/re_enter_the_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/enter"
        android:textAllCaps="true" />

</LinearLayout>