<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hackathon1.addEmployee.AddEmployeeFragment">

    <TextView
        android:id="@+id/textViewEmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/add_new_employee"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etInputName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_the_name"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmp" />

    <EditText
        android:id="@+id/etInputWorkRole"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/enter_the_work_role"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etInputName" />

    <Spinner
        android:id="@+id/spinnerSex"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintTop_toBottomOf="@id/etInputWorkRole"
        android:entries="@array/man_or_woman"
        />

    <RadioGroup
        android:id="@+id/rgTrustLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textViewLevelTrust"
        >

        <RadioButton
            android:id="@+id/rbHigh"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_border"
            android:backgroundTint="@android:color/holo_green_light"
            android:checked="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/high"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbMid"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_border"
            android:backgroundTint="@android:color/holo_orange_light"
            android:padding="8dp"
            android:text="@string/mid"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/rbLow"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/edit_text_border"
            android:backgroundTint="@android:color/holo_red_light"
            android:padding="8dp"
            android:text="@string/low"
            android:textColor="@color/white" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewLevelTrust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/trust_level"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/spinnerSex" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/edit_text_border"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/rgTrustLevel" />

</androidx.constraintlayout.widget.ConstraintLayout>