<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hackathon1.infoOfEmployee.InfoOfEmployeesFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="52dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back" />

            <ImageButton
                android:id="@+id/btnChangeTrustLevel"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_change" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvProfileTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/ivPhoto"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_for_image"
        android:src="@drawable/ic_man1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileTitle" />

    <TextView
        android:id="@+id/tvNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/name1"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

    <TextView
        android:id="@+id/tvWorkRoleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/work_role"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvTrustLevelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/level_of_trust"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWorkRoleTitle" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/_1"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/barProfileInfoEnd"
        app:layout_constraintTop_toTopOf="@id/tvNameTitle" />

    <TextView
        android:id="@+id/tvWorkRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvTrustLevel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/tvWorkRole"
        app:layout_constraintStart_toStartOf="@+id/tvWorkRole"
        app:layout_constraintTop_toBottomOf="@+id/tvWorkRole"
        android:visibility="visible"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barProfileInfoEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvNameTitle, tvWorkRoleTitle, tvTrustLevelTitle" />
    <Spinner
        android:id="@+id/spinnerTrustLevel"
        android:layout_width="0dp"
        android:layout_height="36dp"
        app:layout_constraintEnd_toEndOf="@+id/tvWorkRole"
        app:layout_constraintStart_toStartOf="@+id/tvWorkRole"
        app:layout_constraintTop_toBottomOf="@+id/tvWorkRole"
        app:layout_constraintBottom_toBottomOf="@+id/tvTrustLevel"
        android:entries="@array/spinnerTrustLevel"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/btnSaveNewTrustLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:layout_margin="16dp"
        android:visibility="invisible"
        />


</androidx.constraintlayout.widget.ConstraintLayout>